--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
                 document.getElementById("demo").innerHTML = "To Connect with us through Messenger message us  --Hello!NEO KMS-- ";
             }
         </script>
+        <!-- Load Facebook SDK for JavaScript -->
+      <div id="fb-root"></div>
+      <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            xfbml            : true,
+            version          : 'v8.0'
+          });
+        };
+
+        (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
+
+      <!-- Your Chat Plugin code -->
+      <div class="fb-customerchat"
+        attribution=setup_tool
+        page_id="109368244226794"
+  logged_in_greeting="Hello!Welcome to NEO KMS !!"
+  logged_out_greeting="Hello!Welcome to NEO KMS !!">
+      </div>
     </div>
 </body>
 
