--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         attribution=setup_tool
         page_id="109368244226794"
   logged_in_greeting="Hello!Welcome to NEO KMS !!"
-  logged_out_greeting="Hello!Welcome to NEO KMS !!">
+  logged_out_greeting="Take care,See you soon!!">
       </div>
     </div>
 </body>
