--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <script>
             function myFunction() {
-                document.getElementById("demo").innerHTML = "To Connect with us through Messenger message us  --Hello!NEO KMS-- ";
+                document.getElementById("demo").innerHTML = "To Connect via Facebook click Messsenger chat icon on the page ";
             }
         </script>
         <!-- Load Facebook SDK for JavaScript -->
@@ -43,7 +43,7 @@
       <div class="fb-customerchat"
         attribution=setup_tool
         page_id="109368244226794"
-  logged_in_greeting="Hello!Welcome to NEO KMS !!"
+  logged_in_greeting="Hello!Welcome to NEO KMS ---Please Type "Hello!NEO KMS" to connect!!"
   logged_out_greeting="Take care,See you soon!!">
       </div>
     </div>
