--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="fb-customerchat"
         attribution=setup_tool
         page_id="109368244226794"
-  logged_in_greeting="Hello!Welcome to NEO KMS.Please Type,Hello!NEO KMS"
+  logged_in_greeting="Hello!Welcome to NEO KMS Website.To Connect with us Please Type,Hello!NEO KMS"
   logged_out_greeting="Take care,See you soon!!">
       </div>
     </div>
